# gpu-prs

./: .gitignore  Cargo.toml  README.md
kernel/: kernel.cu  kernel.cuh
scenes/: README.md  scene.json.example
src/: _main.rs  glue.rs  main.rs  math.rs
